<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Poker App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="game_start">Start New Game</string>
    <string name="app_help">Help</string>
    <string name="exit">Exit</string>
    <string name="title_activity_game_interface">GameInterface</string>
    <string name="title_activity_read_rules">ReadRules</string>
    <string name="back_to_menu">Back To Menu</string>
    <string name="dealer_cards">Dealer Cards:\n&#8226;%1$s\n&#8226;%2$s\n&#8226;%3$s\n&#8226;%4$s\n&#8226;%5$s</string>
    <string name="player_cards">Player #%1$d Cards:\n&#8226;%2$s\n&#8226;%3$s\n\nPlayer Hand:\n%4$s\nStrength:\n%5$d</string>
    <string name="deal">Deal</string>
    <string name="winner">Player %1$d wins.</string>
    <string name="player_card_1">Player Card 1</string>
    <string name="player_card_2">Plyer Card 2</string>
    <string name="computer_card_1">Computer Card 1</string>
    <string name="computer_card_2">Computer Card 2</string>
    <string name="dealer_card_1">Dealer Card 1</string>
    <string name="dealer_card_2">Dealer Card 2</string>
    <string name="dealer_card_3">Dealer Card 3</string>
    <string name="dealer_card_4">Dealer Card 4</string>
    <string name="dealer_card_5">Dealer Card 5</string>
    <string name="play">Play</string>
    <string name="fold">Fold</string>
    <string name="player_score">Player Score: %1$d</string>
    <string name="computer_score">Computer Score: %1$d</string>
    <string name="endScore">Playing Until:&lt;br /&gt; %1$d Points</string>
    <string name="title_activity_help">Help</string>
    <string name="title_helpcategory_list">Help Categories</string>
    <string name="title_helpcategory_detail">Help Category Detail</string>
    <string name="show_tips">Show Tips</string>
    <string name="game_orientation">Orientation Options</string>
    <string name="orien_lock_port">Lock Portrait Mode</string>
    <string name="orien_lock_land">Lock Landscape Mode</string>
    <string name="orien_dynamic">Dynamic Orientation</string>
    <string name="resume">Resume Previous Game</string>
    <string name="menu">Menu</string>
    <string name="mainMenu">Return to Main Menu</string>
    <string name="title_activity_help_overview">HelpOverview</string>
    <string name="about">About</string>
    <string name="rules">Rules</string>
    <string name="poker_hands">Poker Hands</string>
    <string name="points">Point Scoring</string>
    <string name="title_activity_help_detail">HelpDetail</string>
    <string name="back">Back</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="help_return">Return</string>
    <string name="title_activity_end_screen">EndScreen</string>
    <string name="use_sound">Enable Sound</string>

</resources>
