<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE xml>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bscofyp.pokerapp.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
        <item android:id="@+id/help" android:visible="true" android:title="@string/app_help"></item>
    
    <item android:id="@+id/tips" android:title="@string/show_tips" android:checkable="true"></item>
    <item android:id="@+id/orientation" android:title="@string/game_orientation">
        <menu>
            <item android:id="@+id/orien_port" android:title="@string/orien_lock_port"/>
            <item android:id="@+id/orien_land" android:title="@string/orien_lock_land"/>
            <item android:id="@+id/orien_normal" android:title="@string/orien_dynamic"/>
        </menu>
    </item>

</menu>
